<resources>
	<string name="app_name">Demo3rdWeek</string>
	<string name="text_welcome">Hello Again. Welcome Back</string>
	<string name="email_address">EMAIl ADDRESS</string>
	<string name="password">PassWord</string>
	<string name="email">Email</string>
	<string name="sign_in">Sign In</string>
	<string name="new_to_friendly_desi">New to Friendly Desi?</string>
	<string name="sign_up">Sign up</string>
	<string name="forgot_password">Forgot PassWord</string>
	<string name="full_name">Full name</string>
	<string name="already_have_an_account">Already have an account?</string>
	<string name="hello_sign_up_to_get_started">Hello! \nSign up to get started.</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
