<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/imgTop"
		android:layout_width="match_parent"
		android:layout_height="202dp"
		android:scaleType="fitXY"
		android:src="@drawable/top_bg"
		app:layout_constraintDimensionRatio="w,375:202"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>

	<ImageView
		android:id="@+id/imgAvatarSignUp"
		android:layout_width="170dp"
		android:layout_height="184dp"
		android:src="@drawable/ic_hi"
		app:layout_constraintBottom_toBottomOf="@id/spaceImgTop"
		app:layout_constraintEnd_toEndOf="@id/spaceImgTop"
		app:layout_constraintStart_toStartOf="@id/spaceImgTop"
		app:layout_constraintTop_toTopOf="@+id/spaceImgTop"
		app:layout_constraintVertical_bias="0.7"/>

	<View
		android:id="@+id/spaceImgTop"
		android:layout_width="0dp"
		android:layout_height="0dp"
		app:layout_constraintEnd_toEndOf="@id/imgTop"
		app:layout_constraintStart_toStartOf="@id/imgTop"
		app:layout_constraintTop_toBottomOf="@id/imgTop"/>

	<TextView
		android:id="@+id/tvWelcome"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/text_welcome"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="@id/imgAvatarSignUp"
		app:layout_constraintStart_toStartOf="@id/imgAvatarSignUp"
		app:layout_constraintTop_toBottomOf="@id/imgAvatarSignUp"/>

	<LinearLayout
		android:id="@+id/linearLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingLeft="30dp"
		android:paddingRight="30dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
		app:layout_constraintVertical_bias="0.3">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/email_address"
			android:textSize="10sp"/>

		<EditText
			android:id="@+id/editEmailLogin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/email"
			android:textSize="15sp"/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/password"
			android:textAllCaps="true"
			android:textSize="10sp"/>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/editPassWordLogin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:singleLine="true"
				android:textSize="15sp"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignEnd="@+id/editPassWordLogin"
				android:layout_alignRight="@+id/editPassWordLogin"
				android:layout_centerVertical="true"
				android:text="@string/forgot_password"/>
		</RelativeLayout>


		<Button
			android:id="@+id/btnSignIn"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/pinkE9446A"
			android:text="@string/sign_in"
			android:textAllCaps="false"
			android:textColor="#ffff"
			android:textSize="16sp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:gravity="center_horizontal"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				android:text="@string/new_to_friendly_desi"/>

			<TextView
				android:id="@+id/tvSignUp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/sign_up"
				android:textColor="@color/pinkE9446A"/>
		</LinearLayout>
	</LinearLayout>

	<ImageView
		android:layout_width="0dp"
		android:layout_height="71dp"
		android:scaleType="fitXY"
		android:src="@drawable/bottom_bg"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintDimensionRatio="w,239:71"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>